Fix a header alignment issue

--- a/pack/components/cd-hud.scss
+++ b/pack/components/cd-hud.scss
@@ -27,7 +27,7 @@ cd-hud {
   }
   
   .cd-hud-icon-spacer {
-    flex: 0 1 10em;
+    flex: 0 1 12em;
     @media (max-width: 580px) { display: none; }
   }
   
